@@ -261,3 +261,4 @@ T_412ui_locale_pl_PL:f84afd16653d395b33943ef722c63cfa-a4f512bdc00e1eab4d27a71517
 T_413memory_resize_nonfree_smaller:c1085152b4b60a197bf93d598d066924:passed:20131102-115507:0.066828215
 T_414vc1_no_sequence_headers_before_key_frames:48a03189f55b303a98332e6594f7bd31:passed:20131115-164756:0.133015738
 T_415create_webm:c1447a8f67f47a0b2d8c21d4208a8f98-5e1abfc5e13a44989a6ff31e51e9eaa9-8ba1b32bd84baef269181ea74cf06f0d-415d91e89e995b02b695e127617d2d8a-AAC@ok-AC3@ok-ALAC@ok-DivX@ok-h.264/AVC@ok-Dirac@ok-DTS@ok-FLV@ok-MP3@ok-MPEG1@ok-MPEG2@ok-PCM@ok-RV4@ok-SSA@ok-PGS@ok-SRT@ok-USF@ok-VC1@ok-WavPack4@ok:passed:20131218-221942:0.832721732
+T_416dts_in_mp4:77e4a560d93a9c1a1030318c07ee48e5-60d52627905d83b1e605119152d7bf4e:passed:20131218-231435:1.398112245
